src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>AccountMappingDone__c</fullName>
        <label>AccountMappingDone</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Name__c</fullName>
        <label>Account Name</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Admin_Surcharge_Applicable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Wowcher Only Field</description>
        <label>Admin Surcharge Applicable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Agency_Type__c</fullName>
        <label>Agency Type</label>
        <picklist>
            <picklistValues>
                <fullName>Creative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Digital</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Holding</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Planning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sponsorship</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Approved_by_Finance__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approved by Finance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bank_Account_Name__c</fullName>
        <label>Bank Account NameW</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bank_Account_No__c</fullName>
        <label>Bank Account No.w</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCIMailCustID__c</fullName>
        <externalId>true</externalId>
        <label>CCIMailCustID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>CCIMetroCustID__c</fullName>
        <externalId>true</externalId>
        <label>CCIMetroCustID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Categorisation_Has_Changed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Categorisation Has Changed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Classified_Minor_Category__c</fullName>
        <label>Classified - Minor Category</label>
        <picklist>
            <controllingField>IndClassLvl1__c</controllingField>
            <picklistValues>
                <fullName>Accessories</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accessories &amp; Soft Furnishings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Africa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>America</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia &amp; New Zealand</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Austria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Balearics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bathrooms</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bedrooms</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blackpool</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bournemouth</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bridal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Building &amp; Construction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Building Maintenance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Businesses For Sale</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canaries</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Car Hire &amp; Leasing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Caribbean</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Channel Islands</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Children</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>China</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Claims Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clerical &amp; Secretarial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conservatories, Lofts &amp; Extensions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contracts &amp; Tenders</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cornwall</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cotswolds</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Company_Registration__c</fullName>
        <label>Company Registration</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CountAdvanceAccountMappings__c</fullName>
        <label>CountAdvanceAccountMappings</label>
        <summaryFilterItems>
            <field>Account_Mapping__c.Source_System__c</field>
            <operation>equals</operation>
            <value>Advance</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Account_Mapping__c.Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Account_Mapping__c.Account__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CountCCIMailAccountMappings__c</fullName>
        <label>CountCCIMailAccountMappings</label>
        <summaryFilterItems>
            <field>Account_Mapping__c.Source_System__c</field>
            <operation>equals</operation>
            <value>CCI Mail</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Account_Mapping__c.Active__c</field>
            <operation>equals</operation>
            <value>true</value>
        </summaryFilterItems>
        <summaryForeignKey>Account_Mapping__c.Account__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CountCCIMetroAccountMappings__c</fullName>
        <label>CountCCIMetroAccountMappings</label>
        <summaryFilterItems>
            <field>Account_Mapping__c.Source_System__c</field>
            <operation>equals</operation>
            <value>CCI Metro</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Account_Mapping__c.Active__c</field>
            <operation>equals</operation>
            <value>true</value>
        </summaryFilterItems>
        <summaryForeignKey>Account_Mapping__c.Account__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CountIDMOriginsAccountMappings__c</fullName>
        <label>CountIDMOriginsAccountMappings</label>
        <summaryFilterItems>
            <field>Account_Mapping__c.Source_System__c</field>
            <operation>equals</operation>
            <value>IDM Origins</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Account_Mapping__c.Active__c</field>
            <operation>equals</operation>
            <value>true</value>
        </summaryFilterItems>
        <summaryForeignKey>Account_Mapping__c.Account__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CountOfOpportunity__c</fullName>
        <label>CountOfOpportunity</label>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CountOperativeOneAccountMappings__c</fullName>
        <label>CountOperativeOneAccountMappings</label>
        <summaryFilterItems>
            <field>Account_Mapping__c.Source_System__c</field>
            <operation>equals</operation>
            <value>Operative One</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Account_Mapping__c.Active__c</field>
            <operation>equals</operation>
            <value>true</value>
        </summaryFilterItems>
        <summaryForeignKey>Account_Mapping__c.Account__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Created_Using__c</fullName>
        <label>Created Using</label>
        <picklist>
            <picklistValues>
                <fullName>Manual</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Lead conversion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Import</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CustomerRef1AgencyNotification__c</fullName>
        <label>CCI Metro Agency Notification</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CustomerRef1__c</fullName>
        <label>CCI Metro Cust Ref</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomerRef2AgencyNotification__c</fullName>
        <label>AdVance Mail Agency Notification</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CustomerRef2__c</fullName>
        <label>AdVance Mail Cust Ref</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomerRef3AgencyNotification__c</fullName>
        <label>CCI Mail Agency Notification</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CustomerRef3__c</fullName>
        <label>CCI Mail Cust Ref</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DSE__DS_Country_ISO_Code__c</fullName>
        <label>Country ISO Code</label>
        <picklist>
            <picklistValues>
                <fullName>AD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AQ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BJ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BO</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DSE__DS_DataScout_Process__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Data Scout: used internally for the data conversion process</description>
        <inlineHelpText>Data Scout: used internally for the data conversion process</inlineHelpText>
        <label>Converted from Data Scout</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DSE__DS_Hierarchy_Level__c</fullName>
        <description>The level of this node in the hierarchy, starting from 1 (Ultimate Parent). A level of 0 means there is no hierarchy for this account</description>
        <inlineHelpText>The level of this node in the hierarchy, starting from 1 (Ultimate Parent). A level of 0 means there is no hierarchy for this account</inlineHelpText>
        <label>Hierarchy Level</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DSE__DS_Last_Updated__c</fullName>
        <label>Last Updated</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DSE__DS_Legal_Form__c</fullName>
        <description>company&apos;s legal form</description>
        <label>Legal Form</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DSE__DS_Synchronize__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Data Scout: synchronize Account data with Bean</description>
        <inlineHelpText>Data Scout: synchronize Account data with Bean</inlineHelpText>
        <label>Synchronize</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DSE__DS_Ultimate_Parent_Name__c</fullName>
        <description>Data Scout: Name of the Ultimate Parent Account</description>
        <inlineHelpText>Data Scout: Name of the Ultimate Parent Account</inlineHelpText>
        <label>Ultimate Parent Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DSE__DS_Ultimate_Parent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Data Scout: Ultimate Parent Account</description>
        <inlineHelpText>Data Scout: Ultimate Parent Account</inlineHelpText>
        <label>Ultimate Parent</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Subsidiaries</relationshipLabel>
        <relationshipName>Subsidiaries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DSE__Demo_Installed_Products__c</fullName>
        <label>Installed Products</label>
        <picklist>
            <picklistValues>
                <fullName>Dish Washer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fryer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Test</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>DSE__Domain__c</fullName>
        <label>Domain</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DSE__X_Internal__c</fullName>
        <description>Used by Cloud MDM internally</description>
        <inlineHelpText>Used by Cloud MDM internally</inlineHelpText>
        <label>X_Internal</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Days_Since_Activity__c</fullName>
        <formula>TODAY() - LastActivityDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Custom Formula Field that calculates the days since the Last Activity Date</inlineHelpText>
        <label>Days Since Activity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Direct_Debit__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To used if direct debit is required</description>
        <inlineHelpText>Tick if customer is to pay by direct debit</inlineHelpText>
        <label>Direct Debit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DoCCIInt__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DoCCIInt</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FirstName__c</fullName>
        <label>FirstName</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Google_Maps_Link__c</fullName>
        <description>Create a link using Google Maps</description>
        <formula>&quot;http://maps.google.com/maps?f=q&amp;source=s_q&amp;hl=en&amp;geocode=&amp;q=&quot; &amp;
IF(NOT(ISNULL(BillingStreet)), BillingStreet &amp; &quot;,&quot; , &quot;&quot;) &amp;
IF(NOT(ISNULL(BillingCity)), BillingCity &amp; &quot;,&quot; , &quot;&quot;) &amp;
IF(NOT(ISNULL(BillingState)), BillingState &amp; &quot;,&quot; , &quot;&quot;) &amp;
IF(NOT(ISNULL(BillingCountry)), BillingCountry &amp; &quot;,&quot; , &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Google Maps Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hierarchy_Revenue_Last_Month__c</fullName>
        <label>Hierarchy Revenue Last Month</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Hierarchy_Revenue_Last_Quarter__c</fullName>
        <label>Hierarchy Revenue Last Quarter</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Hierarchy_Revenue_Last_Year__c</fullName>
        <label>Hierarchy Revenue Last Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>IndClassLvl1__c</fullName>
        <label>Classified - Main Category</label>
        <picklist>
            <picklistValues>
                <fullName>Business &amp; Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Entertainments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fashion &amp; Retail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Health</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Homes &amp; Gardens</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mail Order</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mobility</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Motors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Noticeboard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Personal &amp; Notices</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Property Overseas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Property UK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Recruitment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Travel Overseas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Travel UK</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IndClassLvl2__c</fullName>
        <label>Classified - Sub Category</label>
        <picklist>
            <controllingField>IndClassLvl1__c</controllingField>
            <picklistValues>
                <fullName>Airlines</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Airport Parking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Apprenticeships</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auctions (General)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auctions (Motors)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auctions (Property)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B&amp;B/Guest Houses</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bars/Clubs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bathing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Battlefields</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Births, Deaths and Marriages</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Opportunities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business to Business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Camping and Caravan Holidays</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Caravan Holidays</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Caravans &amp; Motorhomes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Car Hire</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cars</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cars wanted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Charities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Charity Events</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chatlines</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Christmas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cinemas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>City Living</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clinical Trials</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Collectables</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Colleges</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial Property</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complementary Therapies &amp; Wellbeing</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Industry_Minor_Category__c</fullName>
        <label>Industry Minor Category</label>
        <picklist>
            <controllingField>Industry</controllingField>
            <picklistValues>
                <fullName>04.01.30 - GIN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>04.01.10 - BEER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>04.01.12 - LAGER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>04.01.05 - ALCOHOL FREE BEER &amp; LAGER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>04.01.20 - BRANDY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>04.01.80 - VODKA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>04.01.40 - PORT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>04.01.89 - CHAMPAGNE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>04.01.50 - SHERRY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>04.01.93 - ALCOPOPS ALCOHOL SOFT DRINKS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>04.01.25 - CIDER &amp; PERRY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>06.02.00 - TOBACCO ACCESSORIES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>06.02.05 - LIGHTERS,MATCHES,OTHER ACCES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>06.01.00 - TOBACCO RANGE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>06.01.10 - CIGARS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>06.01.05 - CIGARETTES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>08.99.99 - COSMETICS &amp; TOILETRIES CORP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>08.06.00 - PROFESSIONAL/B2B HAIR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>08.06.40 - SALONS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>08.05.00 - MEN &amp; WOMENS FRAGRANCES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>08.05.10 - PREMIUM MENS/WOMENS FRAG RAN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>08.05.05 - PREMIUM WOMENS PERFUMES/FRAG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>08.05.11 - MASS MKT MENS/WOMENS FRAG RG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>08.04.00 - PERSONAL HYGIENE &amp; HEALTH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>08.04.55 - SHAVING PREPARATIONS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>08.04.50 - SANITARY PROTECTION</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>08.04.65 - WET RAZORS &amp; BLADES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>08.04.91 - PERSONAL HYGIENE &amp; HEALTH GE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>08.04.05 - DENTALCARE-DENTURE CLEANERS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>08.04.20 - DENTALCARE-TOOTHPASTE,POLISH</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Industry_Sub_Category__c</fullName>
        <label>Industry Sub Category</label>
        <picklist>
            <controllingField>Industry</controllingField>
            <picklistValues>
                <fullName>00.00 - UNKNOWN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>02.01 - BAKERY GOODS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>02.02 - CONFECTIONERY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>02.03 - COOKING PRODUCTS &amp; SEASONING</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>02.04 - DAIRY PRODUCTS &amp; SUBSTITUTES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>02.05 - USE 4.4.X</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>02.06 - FRUIT, VEGETABLES, PASTA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>02.07 - MEAT, FISH &amp; POULTRY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>02.08 - PREPARED &amp; CONVENIENCE FOODS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>02.09 - ORGANIC FOODS RGE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>02.90 - FOOD - SPONSORSHIP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>02.99 - FOOD CORPORATE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>04.01 - ALCOHOLIC DRINKS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>04.02 - SOFT DRINKS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>04.03 - ORGANIC DRINKS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>04.04 - BEVERAGES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>06.01 - TOBACCO RANGE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>06.02 - TOBACCO ACCESSORIES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>08.01 - BATH TOILETRIES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>08.02 - BEAUTY AIDS &amp; COSMETICS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>08.03 - HAIR PRODUCTS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>08.04 - PERSONAL HYGIENE &amp; HEALTH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>08.05 - MEN &amp; WOMENS FRAGRANCES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>08.06 - PROFESSIONAL/B2B HAIR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>08.99 - COSMETICS &amp; TOILETRIES CORP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10.01 - FIRST AID</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10.02 - MEDICATION</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10.03 - CHEMIST RELATED</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10.04 - FAMILY PLANNING</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10.05 - HEALTH &amp; FITNESS</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>IsActive__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsMerchant__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Identify whether the Account is also a Merchant</description>
        <label>IsMerchant</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Charity__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates customer has charity status</description>
        <inlineHelpText>if ticked Indicates customer has charity status</inlineHelpText>
        <label>Is Charity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Reviewed_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Account last reviewed by</description>
        <label>Last Reviewed By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts1</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>